--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -1,1 +1,70 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Privacy Policy • Precision Appraisal Zone</title>
+  <meta name="robots" content="index,follow" />
+  <style>
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;line-height:1.6;color:#1f2937;background:#f9fafb;margin:0}
+    .wrap{max-width:860px;margin:0 auto;padding:48px 20px}
+    h1{font-size:2rem;margin:0 0 6px}
+    h2{font-size:1.25rem;margin-top:28px}
+    p,li{color:#374151}
+    .muted{color:#6b7280;font-size:.9rem}
+    a{color:#111827}
+  </style>
+</head>
+<body>
+  <main class="wrap">
+    <h1>Privacy Policy</h1>
+    <div class="muted">Last updated: September 2025</div>
+
+    <p>Precision Appraisal Zone (“PAZ”, “we”, “us”) provides independent auto appraisal services including
+      Diminished Value (DV), Loss of Use (LoU), and Total Loss valuation support. This policy explains what
+      information we collect, how we use it, and your choices.</p>
+
+    <h2>Information We Collect</h2>
+    <ul>
+      <li><strong>Contact details</strong> — name, email, phone, communication preferences.</li>
+      <li><strong>Claim &amp; vehicle data</strong> — VIN, estimates, repair invoices, photos, police reports,
+          insurer offers, and related correspondence you or your representatives provide.</li>
+      <li><strong>Technical data</strong> — IP address, device/browser, and pages viewed for security and basic analytics.</li>
+    </ul>
+
+    <h2>How We Use Information</h2>
+    <ul>
+      <li>Evaluate cases and prepare appraisal reports (DV/LoU/Total Loss).</li>
+      <li>Communicate with you and your authorized representatives (e.g., attorneys, public adjusters, body shops).</li>
+      <li>Improve services, site security, and customer support.</li>
+      <li>Comply with legal obligations and prevent fraud/abuse.</li>
+    </ul>
+
+    <h2>Sharing</h2>
+    <p>We share information only as needed to deliver services (for example, with your attorney, public adjuster,
+      or repair facility) or as required by law. We do not sell personal information.</p>
+
+    <h2>Retention</h2>
+    <p>We retain records for a commercially reasonable period to support your claim and comply with legal obligations,
+      then securely delete or anonymize them.</p>
+
+    <h2>Security</h2>
+    <p>We use reasonable administrative, technical, and physical safeguards appropriate to the sensitivity of data.
+      No system is 100% secure.</p>
+
+    <h2>Your Choices</h2>
+    <ul>
+      <li><strong>Access/Correction:</strong> Contact us to review or update your information.</li>
+      <li><strong>Deletion:</strong> Request deletion subject to legal/contractual obligations.</li>
+      <li><strong>Marketing:</strong> You can opt out of non-essential communications.</li>
+    </ul>
+
+    <h2>Children</h2>
+    <p>Our services are not directed to children under 13.</p>
+
+    <h2>Jurisdiction</h2>
+    <p>Florida law governs this policy, except where preempted by U.S. federal law.</p>
+
+    <h2>Contact</h2>
+    <p>Precision Appraisal Zone • precisionappraisalzone@gmail.com • +1 (954) 839-7653
 
