--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -1,1 +1,69 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Terms of Service • Precision Appraisal Zone</title>
+  <meta name="robots" content="index,follow" />
+  <style>
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;line-height:1.6;color:#1f2937;background:#f9fafb;margin:0}
+    .wrap{max-width:860px;margin:0 auto;padding:48px 20px}
+    h1{font-size:2rem;margin:0 0 6px}
+    h2{font-size:1.25rem;margin-top:28px}
+    p,li{color:#374151}
+    .muted{color:#6b7280;font-size:.9rem}
+    a{color:#111827}
+  </style>
+</head>
+<body>
+  <main class="wrap">
+    <h1>Terms of Service</h1>
+    <div class="muted">Last updated: September 2025</div>
+
+    <p>These Terms govern your use of the Precision Appraisal Zone (“PAZ”, “we”, “us”) website and services.
+      By using our site or engaging our services, you agree to these Terms.</p>
+
+    <h2>Services</h2>
+    <p>We provide independent auto appraisal services including Diminished Value (DV), Loss of Use (LoU),
+      and Total Loss valuation support. Reports are expert opinions based on available data and market analysis;
+      they are not guarantees of outcomes.</p>
+
+    <h2>No Legal or Insurance Services</h2>
+    <p>We are not a law firm or insurance company and do not provide legal advice or sell insurance.
+      You should consult your attorney for legal advice.</p>
+
+    <h2>Your Responsibilities</h2>
+    <ul>
+      <li>Provide accurate and complete information (e.g., estimates, invoices, photos, correspondence).</li>
+      <li>Disclose any prior accidents or relevant conditions affecting value.</li>
+      <li>Use reports only for lawful purposes.</li>
+    </ul>
+
+    <h2>Fees &amp; Refunds</h2>
+    <p>Fees are due as quoted. Rush fees may apply. Our guarantee: if your insurer doesn’t increase the offer
+      by at least the cost of your PAZ report within 60 days—and you followed our negotiation steps—we’ll refund your fee.</p>
+
+    <h2>Intellectual Property</h2>
+    <p>Reports and site content are owned by PAZ. You receive a limited license to use deliverables for your claim or legal matter.</p>
+
+    <h2>Limitation of Liability</h2>
+    <p>To the fullest extent permitted by law, PAZ is not liable for indirect, incidental, special, or consequential damages.
+      Our total liability shall not exceed the fees you paid for the applicable service.</p>
+
+    <h2>Standards &amp; Licensing</h2>
+    <p>PAZ operates with a Florida <strong>620</strong> Adjuster License. USPAP coursework is in progress; when complete,
+      we may update these Terms accordingly.</p>
+
+    <h2>Governing Law &amp; Disputes</h2>
+    <p>These Terms are governed by Florida law. Venue for disputes lies in the state courts of Miami-Dade County, Florida,
+      or the appropriate U.S. federal court in Florida.</p>
+
+    <h2>Changes</h2>
+    <p>We may update these Terms; continued use constitutes acceptance of any changes.</p>
+
+    <h2>Contact</h2>
+    <p>precisionappraisalzone@gmail.com • +1 (954) 839-7653 • South Florida</p>
+  </main>
+</body>
+</html>
 
